--- a/src/pug/points.pug
+++ b/src/pug/points.pug
@@ -9,3 +9,4 @@ block content
   div.body.body--start(class != pageClassName)
 
     include components/points/_main
+    include components/points/_benefits
