--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,7 +14,7 @@
 /// GENERATED
 /// ===============
 //@import "_generated/spritePNG";
-//@import "_generated/spriteSVG";
+@import "_generated/spriteSVG";
 @import "_generated/spriteFont";
 ///
 /// SHARED
@@ -28,7 +28,7 @@
 @import "_shared/swiper";
 //@import "_shared/objectFitImages";
 //@import "_shared/iconPNG";
-//@import "_shared/iconSVG";
+@import "_shared/iconSVG";
 @import "_shared/iconFont";
 ///
 /// MACROS
@@ -68,5 +68,6 @@
 @import "_components/sign/sign";
 
 @import "_components/points/main";
+@import "_components/points/benefits";
 
 @import "_components/rankings/rankings";
