--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -68,6 +68,7 @@
 @import "_components/sign/sign";
 
 @import "_components/points/main";
+@import "_components/points/calculate";
 @import "_components/points/benefits";
 
 @import "_components/rankings/rankings";
