--- a/src/pug/points.pug
+++ b/src/pug/points.pug
@@ -9,4 +9,5 @@ block content
   div.body.body--start(class != pageClassName)
 
     include components/points/_main
+    include components/points/_calculate
     include components/points/_benefits
